# rl-llm-agent

bixbench-rl-agent/: README.md  pyproject.toml
bixbench-rl-agent/bixbench-rl-agent/: README.md  pyproject.toml
bixbench-rl-agent/bixbench-rl-agent/scripts/: eval_bixbench.sh  setup_env.sh
bixbench-rl-agent/bixbench-rl-agent/src/agents/: notebook_agent.py
bixbench-rl-agent/bixbench-rl-agent/src/envs/: notebook_env.py
bixbench-rl-agent/bixbench-rl-agent/tests/: run_single_capsule.py  test_api_compatibility.py
bixbench-rl-agent/configs/: grpo_hypothesis.yaml  grpo_step.yaml
bixbench-rl-agent/notebooks/: colab_quickstart.ipynb
bixbench-rl-agent/scripts/: setup_env.sh  train_grpo.py  train_grpo_hypothesis.py
bixbench-rl-agent/src/dataset/: __init__.py  nemotron_dataset.py
bixbench-rl-agent/src/envs/: crow_env.py
bixbench-rl-agent/src/verifiers/: __init__.py  protocol.py  rubric.py  step_verifiers.py
bixbench-rl-agent/tests/: test_hypothesis_pipeline.py
