[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bixbench-rl-agent"
version = "1.0.0"
description = "Edison Scientific BixBench RL agent reproduction (NeMo Gym + Aviary + BixBench)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

dependencies = [
    # ── 核心框架（必须从源码安装，见 setup_env.sh）──────────────
    # aviary[notebook] - FutureHouse Aviary Notebook 环境
    #   git clone https://github.com/Future-House/aviary.git
    #   uv pip install -e 'aviary/packages/aviary[notebook]'
    #   uv pip install -e 'aviary/packages/aviary.notebook'
    # ldp - FutureHouse agent 框架
    #   uv pip install -e 'aviary/packages/ldp'
    # data-analysis-crow (fhda) - FutureHouse 数据分析 crow 环境
    #   git clone https://github.com/Future-House/data-analysis-crow.git
    #   uv pip install -e data-analysis-crow/
    # bixbench - BixBench 数据集 + 评估（可选，用于 BixBench eval）
    #   git clone https://github.com/Future-House/BixBench.git
    #   uv pip install -e BixBench/

    # ── 可通过 PyPI 安装的依赖 ───────────────────────────────────
    "pydantic>=2.6.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",

    # HuggingFace datasets（用于加载 Nemotron 数据集）
    "datasets>=2.18.0",
    "huggingface-hub>=0.22.0",

    # Jupyter（本地 kernel，非 Docker 模式）
    "jupyter-client>=8.6.0",
    "ipykernel>=6.29.0",
    "nbformat>=5.9.0",
    "nbconvert>=7.14.0",

    # Docker（用于 BixBench 生物信息学执行环境）
    "aiodocker>=0.21.0",

    # LLM 客户端
    "litellm>=1.30.0",
    "openai>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

train = [
    # NeMo RL（从源码安装）
    # git clone https://github.com/NVIDIA-NeMo/RL.git && cd RL && uv sync --extra dev
    "torch>=2.2.0",
    "transformers>=4.39.0",
    "peft>=0.10.0",
    "accelerate>=0.27.0",
    "wandb>=0.16.0",
    # verifiers — GRPO training framework
    # pip install 'verifiers[all]'
    "verifiers>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
